--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -36,11 +36,12 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <form class="d-flex" method="post" action="/" novalidate>
             <input
               class="form-control me-2"
               type="search"
               placeholder="Search"
+              name="dhruvSearch"
               aria-label="Search"
             />
             <button class="btn btn-outline-light" type="submit">Search</button>
